--- a/libs/chat/src/lib/components/message/message.component.html
+++ b/libs/chat/src/lib/components/message/message.component.html
@@ -1,22 +1,33 @@
 @if (this.received) {
-  <ion-item lines="none" class="message-me">
-    @if (this.isLastMessage) {
-      <sio-avatar slot="start" [name]="this.user" class="ion-align-self-end user-avatar" *ngIf="this.isLastMessage" />
+  <ion-item
+    lines="none"
+    [class]="this.received ? 'message-me' : 'message-user'"
+    class="message-item"
+    >
+    @if (this.isLastMessage && this.received) {
+      @if (this.isLastMessage) {
+        <sio-avatar
+          slot="start"
+          [name]="this.user"
+          class="ion-align-self-end user-avatar"
+          />
+      }
     }
-  <div class="message-container" [ngClass]="{ 'user-msg-padding': this.isLastMessage}">
-    <span class="text" [innerHTML]="this.message"></span>
-    <small class="time">{{ this.date | amDateFormat: 'hh:mm' }}</small>
-  </div>
-</ion-item>
-} 
-@else {
-<ion-item *ngIf="!this.received" lines="none" class="message-user">
-  <div class="message-container" slot="end">
-    <span class="text" [innerHTML]="this.message"></span>
-    <small class="time">{{ this.date | amDateFormat: 'hh:mm' }}</small>
-  </div>
-  <ion-avatar slot="end" class="ion-align-self-end user-avatar" *ngIf="this.isLastMessage">
-    <img [src]="this.avatar" />
-  </ion-avatar>
-</ion-item>
+    <div
+      class="message-container"
+      [ngClass]="{ 'user-msg-padding': this.isLastMessage }"
+      >
+      <span class="text" [innerHTML]="this.body"></span>
+      <small class="time">{{ this.date | amDateFormat: 'hh:mm' }}</small>
+    </div>
+    @if (this.received && this.isLastMessage) {
+      @if (this.isLastMessage) {
+        <sio-avatar
+          slot="start"
+          [name]="this.user"
+          class="ion-align-self-end user-avatar"
+          />
+      }
+    }
+  </ion-item>
 }
