--- a/libs/auth/src/lib/components/badge/badge.component.html
+++ b/libs/auth/src/lib/components/badge/badge.component.html
@@ -1,39 +1,43 @@
-<div *ngIf="this.type === 'button'; else default">
-  <a (click)="this.goPage(this.urlNeedLogin)" *ngIf="!this.sioAuthState.isAutenticated; else logged2">
-    <sio-icon name="person"></sio-icon>
-  </a>
-</div>
-<ng-template #logged2>
-  <a (click)="this.goPage(this.urlProfilePage)">
-    <ion-avatar [class]="this.size">
-      <ion-img [src]="this.sioAuthState.user?.details?.photoURL"></ion-img>
-    </ion-avatar>
-  </a>
-</ng-template>
-<ng-template #default>
-  <div content *ngIf="!this.sioAuthState.isAutenticated; else logged">
-    <ng-content id="message"></ng-content>
-    <ion-menu-toggle auto-hide="false">
-      <ion-list inset="true">
-        <sio-menu-item [color]="this.color" icon="person" [url]="this.urlLoginPage" [caption]="this.text">
-        </sio-menu-item></ion-list>
-    </ion-menu-toggle>
+@if (this.type === 'button') {
+  <div>
+    @if (!this.sioAuthState.isAutenticated) {
+      <a (click)="this.goPage(this.urlNeedLogin)">
+        <sio-icon name="person"></sio-icon>
+      </a>
+    } @else {
+      <a (click)="this.goPage(this.urlProfilePage)">
+        <ion-avatar [class]="this.size">
+          <ion-img [src]="this.sioAuthState.user?.details?.photoURL"></ion-img>
+        </ion-avatar>
+      </a>
+    }
   </div>
-  <ng-template #logged><ion-accordion-group>
-      <ion-accordion value="badge">
-        <ion-item slot="header" [color]="this.color">
-          <ion-avatar [class]="this.size" slot="start">
-            <ion-img [src]="this.sioAuthState.user?.details?.photoURL"></ion-img>
-          </ion-avatar>
-          <ion-label>
-            <h2>{{this.sioAuthState.user!.displayName}}</h2>
-          </ion-label>
-        </ion-item>
-        <div class="ion-padding" slot="content">
-          <sio-menu menuID="logged"></sio-menu>
-          <sio-button block color="danger" icon="exit">{{ 'BADGE_LOGOUT' | translate }}</sio-button>
-        </div>
-      </ion-accordion>
-    </ion-accordion-group>
-  </ng-template>
-</ng-template>
+} @else {
+  @if (!this.sioAuthState.isAutenticated) {
+    <div content>
+      <ng-content id="message"></ng-content>
+      <ion-menu-toggle auto-hide="false">
+        <ion-list inset="true">
+          <sio-menu-item [color]="this.color" icon="person" [url]="this.urlLoginPage" [caption]="this.text">
+          </sio-menu-item></ion-list>
+        </ion-menu-toggle>
+      </div>
+    } @else {
+      <ion-accordion-group>
+        <ion-accordion value="badge">
+          <ion-item slot="header" [color]="this.color">
+            <ion-avatar [class]="this.size" slot="start">
+              <ion-img [src]="this.sioAuthState.user?.details?.photoURL"></ion-img>
+            </ion-avatar>
+            <ion-label>
+              <h2>{{this.sioAuthState.user!.displayName}}</h2>
+            </ion-label>
+          </ion-item>
+          <div class="ion-padding" slot="content">
+            <sio-menu menuID="logged"></sio-menu>
+            <sio-button block color="danger" icon="exit">{{ 'BADGE_LOGOUT' | translate }}</sio-button>
+          </div>
+        </ion-accordion>
+      </ion-accordion-group>
+    }
+  }
