--- a/libs/core/src/lib/components/item/item.component.html
+++ b/libs/core/src/lib/components/item/item.component.html
@@ -1,22 +1,29 @@
 <ion-item-sliding [disabled]="this.disabled" #slidingItem>
   @if (this.leftMenuId) {
     <ion-item-options side="start">
-      <ion-item-option
-        *ngFor="let item of this.sioCoreLeftMenuState?.items | keyvalue"
-        [color]="item.value.color"
-      >
-        <ion-icon slot="icon-only" [name]="item.value.icon"></ion-icon>
-      </ion-item-option>
+      @for (item of this.sioCoreLeftMenuState?.items | keyvalue; track item) {
+        <ion-item-option
+          [color]="item.value.color"
+          >
+          <ion-icon slot="icon-only" [name]="item.value.icon"></ion-icon>
+        </ion-item-option>
+      }
     </ion-item-options>
   }
   <ion-item lines="none" button="this.button" [color]="this.color" (click)="this.click($event)">
-    <sio-icon *ngIf="this.icon" name="this.icon" slot="start"></sio-icon>
-    <ion-avatar *ngIf="this.avatar" slot="start">
-      <ion-img [alt]="this.alt" [src]="this.avatar" />
-    </ion-avatar>
-    <ion-thumbnail *ngIf="this.thumbnail" slot="start">
-      <ion-img [alt]="this.alt" [src]="this.thumbnail" />
-    </ion-thumbnail>
+    @if (this.icon) {
+      <sio-icon name="this.icon" slot="start"></sio-icon>
+    }
+    @if (this.avatar) {
+      <ion-avatar slot="start">
+        <ion-img [alt]="this.alt" [src]="this.avatar" />
+      </ion-avatar>
+    }
+    @if (this.thumbnail) {
+      <ion-thumbnail slot="start">
+        <ion-img [alt]="this.alt" [src]="this.thumbnail" />
+      </ion-thumbnail>
+    }
     <ion-label>
       <h3>{{ this.header | translate }}</h3>
       <p>{{ this.label | translate }}</p>
@@ -33,12 +40,13 @@
   </ion-item>
   @if (this.rightMenuId) {
     <ion-item-options side="end">
-      <ion-item-option
-        *ngFor="let item of this.sioCoreRightMenuState?.items | keyvalue"
-        [color]="item.value.color"
-      >
-        <ion-icon slot="icon-only" [name]="item.value.icon"></ion-icon>
-      </ion-item-option>
+      @for (item of this.sioCoreRightMenuState?.items | keyvalue; track item) {
+        <ion-item-option
+          [color]="item.value.color"
+          >
+          <ion-icon slot="icon-only" [name]="item.value.icon"></ion-icon>
+        </ion-item-option>
+      }
     </ion-item-options>
   }
 </ion-item-sliding>
