--- a/libs/core/src/lib/components/list/list.component.html
+++ b/libs/core/src/lib/components/list/list.component.html
@@ -1,15 +1,16 @@
 <ion-list>
-  <sio-item
-    *ngFor="let item of this.data; trackItem"
-    [$id]="item['$id']"
-    [header]="item[this.header]"
-    [label]="item[this.label]"
-    [thumbnail]="this.thumbnail ? item[this.thumbnail] : undefined"
-    [avatar]="this.avatar ? item[this.avatar] : undefined"
-    [icon]="this.icon ? item[this.icon] : undefined"
-    [rightMenuId]="this.rightMenuId"
-    [leftMenuId]="this.leftMenuId"
-    (sioOnClick) = "this.click($event)"
-  >
-  </sio-item>
+  @for (item of this.data; track item) {
+    <sio-item
+      [$id]="item['$id']"
+      [header]="item[this.header]"
+      [label]="item[this.label]"
+      [thumbnail]="this.thumbnail ? item[this.thumbnail] : undefined"
+      [avatar]="this.avatar ? item[this.avatar] : undefined"
+      [icon]="this.icon ? item[this.icon] : undefined"
+      [rightMenuId]="this.rightMenuId"
+      [leftMenuId]="this.leftMenuId"
+      (sioOnClick) = "this.click($event)"
+      >
+    </sio-item>
+  }
 </ion-list>
