--- a/libs/core/src/lib/components/page/page.component.html
+++ b/libs/core/src/lib/components/page/page.component.html
@@ -1,40 +1,49 @@
-<ion-header *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar && !this.fullmode" collapse="fade"
-  [translucent]="true" class="ion-no-border">
-  <ion-toolbar [color]="this.sioCorePagesComponentState.entities[this.id!].color || 'light'">
-    <ion-buttons slot="start">
-      <ng-container>
-        <ion-menu-button *ngIf="!this.back" menu="start"></ion-menu-button>
-        <ion-back-button *ngIf="this.back"></ion-back-button>
-      </ng-container>
-    </ion-buttons>
-    <ion-title>{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate
+@if (this.sioCorePagesComponentState.entities![this.id!]?.toolbar && !this.fullmode) {
+  <ion-header collapse="fade"
+    [translucent]="true" class="ion-no-border">
+    <ion-toolbar [color]="this.sioCorePagesComponentState.entities[this.id!].color || 'light'">
+      <ion-buttons slot="start">
+        <ng-container>
+          @if (!this.back) {
+            <ion-menu-button menu="start"></ion-menu-button>
+          }
+          @if (this.back) {
+            <ion-back-button></ion-back-button>
+          }
+        </ng-container>
+      </ion-buttons>
+      <ion-title>{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate
       }}</ion-title>
-    <ion-buttons slot="end">
-      <ng-content select="[slot='end']"> </ng-content>
-    </ion-buttons> 
-    <ion-buttons *ngIf="!this.sioCoreAppComponentState.snapshot.layout!.split" slot="end">
-      <ng-content select="[slot='mobile']"></ng-content>
-
-      <ion-menu-button menu="end"></ion-menu-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+      <ion-buttons slot="end">
+        <ng-content select="[slot='end']"> </ng-content>
+      </ion-buttons>
+      @if (!this.sioCoreAppComponentState.snapshot.layout!.split) {
+        <ion-buttons slot="end">
+          <ng-content select="[slot='mobile']"></ng-content>
+          <ion-menu-button menu="end"></ion-menu-button>
+        </ion-buttons>
+      }
+    </ion-toolbar>
+  </ion-header>
+}
 <ion-content [fullscreen]="true" [fullscreen]="true"
   [scrollEvents]="true"
   [scrollY]="this.isAllowScroll"
   (ionScrollStart)="this.logScrollStart()"
   (ionScroll)="this.logScrolling($event)"
   (ionScrollEnd)="this.logScrollEnd()" class="ion-padding">
-  <ion-header *ngIf="this.sioCorePagesComponentState.entities![this.id!]?.toolbar!" collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ this.sioCorePagesComponentState.entities[this.id!].title! |
+  @if (this.sioCorePagesComponentState.entities![this.id!]?.toolbar!) {
+    <ion-header collapse="condense">
+      <ion-toolbar>
+        <ion-title size="large">{{ this.sioCorePagesComponentState.entities[this.id!].title! |
         translate }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+      </ion-toolbar>
+    </ion-header>
+  }
   <div #content>
     <ng-content></ng-content>
   </div>
-  <ng-container *ngIf="!content.hasChildNodes()">
+  @if (!content.hasChildNodes()) {
     <div id="container">
       <h1>
         {{ 'PAGE_COMPONENT_DEFAULT_1' | translate }} {{
@@ -44,17 +53,17 @@
       <p>
         {{ 'PAGE_COMPONENT_LINK' | translate }}
         <a target="_blank" rel="noopener noreferrer" href="https://silicia-apps.gitbook.io/sio-framework/">SIO
-          Framework</a>
+        Framework</a>
       </p>
     </div>
-  </ng-container>
+  }
 </ion-content>
 
 <ion-footer>
   <div #footer>
     <ng-content select="[slot='footer']"></ng-content>
   </div>
-  <ng-container *ngIf="!footer.hasChildNodes()">
+  @if (!footer.hasChildNodes()) {
     <ion-fab slot="footer" vertical="bottom" horizontal="end">
       <sio-button type="fab" icon="add"></sio-button>
       <ion-fab-list side="top">
@@ -63,5 +72,5 @@
         <sio-button type="fab" icon="car" size="small" upload></sio-button>
       </ion-fab-list>
     </ion-fab>
-  </ng-container>
+  }
 </ion-footer>
