--- a/libs/database/src/lib/components/data-list/data-list.component.html
+++ b/libs/database/src/lib/components/data-list/data-list.component.html
@@ -1,16 +1,20 @@
-<ion-refresher slot="fixed" *ngIf="this.refresh !== null" (ionRefresh)="this.refresh($event)">
-  <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="{{ 'LIST_PULL_TEXT' | translate }}"
-    refreshingSpinner="circles" refreshingText="{{ 'LIST_PULL_WAITING' | translate }}">
-  </ion-refresher-content>
-</ion-refresher>
+@if (this.refresh !== null) {
+  <ion-refresher slot="fixed" (ionRefresh)="this.refresh($event)">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="{{ 'LIST_PULL_TEXT' | translate }}"
+      refreshingSpinner="circles" refreshingText="{{ 'LIST_PULL_WAITING' | translate }}">
+    </ion-refresher-content>
+  </ion-refresher>
+}
 <sio-list [data]="this.store!.selectAll()" [header]="this.header" [label]="this.label" [thumbnail]="this.thumbnail"
   (sioOnLeftSwipe)="this.leftSwipe($event)" (sioOnRightSwipe)="this.rightSwipe($event)"
   (sioOnInfinite)="this.infinite($event)" (sioOnRefresh)="this.refresh($event)" (sioOnClick)="this.click($event)"
   [leftMenuId]="this.leftMenuId"
   [rightMenuId]="this.rightMenuId">
 </sio-list>
-<ion-infinite-scroll *ngIf="this.infinite !== null && this.store?.localTotals !== this.store?.remoteTotals"
-  threshold="20%" (ionInfinite)="this.infinite($event)">
-  <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="{{ 'LIST_LOADING' | translate }}">
-  </ion-infinite-scroll-content>
-</ion-infinite-scroll>
+@if (this.infinite !== null && this.store?.localTotals !== this.store?.remoteTotals) {
+  <ion-infinite-scroll
+    threshold="20%" (ionInfinite)="this.infinite($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="{{ 'LIST_LOADING' | translate }}">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+}
