--- a/libs/auth/src/lib/components/badge/badge.component.html
+++ b/libs/auth/src/lib/components/badge/badge.component.html
@@ -7,7 +7,7 @@
     } @else {
       <a (click)="this.goPage(this.urlProfilePage)">
         <ion-avatar [class]="this.size">
-          <ion-img [src]="this.user.details.photoURL"></ion-img>
+          <ion-img [src]="this.user().details.photoURL"></ion-img>
         </ion-avatar>
       </a>
     }
@@ -18,26 +18,34 @@
       <ng-content id="message"></ng-content>
       <ion-menu-toggle auto-hide="false">
         <ion-list inset="true">
-          <sio-menu-item [color]="this.color" icon="person" [url]="this.urlLoginPage" [caption]="this.text">
-          </sio-menu-item></ion-list>
-        </ion-menu-toggle>
-      </div>
-    } @else {
-      <ion-accordion-group>
-        <ion-accordion value="badge">
-          <ion-item slot="header" [color]="this.color">
-            <ion-avatar [class]="this.size" slot="start">
-              <ion-img [src]="this.user.details.photoURL | async"></ion-img>
-            </ion-avatar>
-            <ion-label>
-              <h2>{{this.user.displayName}}</h2>
-            </ion-label>
-          </ion-item>
-          <div class="ion-padding" slot="content">
-            <sio-menu menuID="logged"></sio-menu>
-            <sio-button block color="danger" icon="exit">{{ 'BADGE_LOGOUT' | translate }}</sio-button>
-          </div>
-        </ion-accordion>
-      </ion-accordion-group>
-    }
+          <sio-menu-item
+            [color]="this.color"
+            icon="person"
+            [url]="this.urlLoginPage"
+            [caption]="this.text"
+          >
+          </sio-menu-item
+        ></ion-list>
+      </ion-menu-toggle>
+    </div>
+  } @else {
+    <ion-accordion-group>
+      <ion-accordion value="badge">
+        <ion-item slot="header" [color]="this.color">
+          <ion-avatar [class]="this.size" slot="start">
+            <ion-img [src]="this.user().details.photoURL"></ion-img>
+          </ion-avatar>
+          <ion-label>
+            <h2>{{ this.user().displayName }}</h2>
+          </ion-label>
+        </ion-item>
+        <div class="ion-padding" slot="content">
+          <sio-menu menuID="logged"></sio-menu>
+          <sio-button block color="danger" icon="exit">{{
+            'BADGE_LOGOUT' | translate
+          }}</sio-button>
+        </div>
+      </ion-accordion>
+    </ion-accordion-group>
   }
+}
