--- a/libs/core/src/lib/components/page/page.component.html
+++ b/libs/core/src/lib/components/page/page.component.html
@@ -1,7 +1,12 @@
-@if (this.sioCorePagesComponentState.entities![this.id!]?.toolbar! && !this.fullmode) {
-  <ion-header collapse="fade"
-    [translucent]="true" class="ion-no-border">
-    <ion-toolbar [color]="this.sioCorePagesComponentState.entities[this.id!].color || 'light'">
+@if (
+  this.sioCorePagesComponentState.entities[this.id!].toolbar && !this.fullmode
+) {
+  <ion-header collapse="fade" [translucent]="true" class="ion-no-border">
+    <ion-toolbar
+      [color]="
+        this.sioCorePagesComponentState.entities[this.id!].color || 'light'
+      "
+    >
       <ion-buttons slot="start">
         <ng-container>
           @if (!this.back) {
@@ -12,7 +17,8 @@
           }
         </ng-container>
       </ion-buttons>
-      <ion-title>{{ this.sioCorePagesComponentState.entities[this.id!].title! | translate
+      <ion-title>{{
+        this.sioCorePagesComponentState.entities[this.id!].title! | translate
       }}</ion-title>
       <ion-buttons slot="end">
         <ng-content select="[slot='end']"> </ng-content>
@@ -26,17 +32,22 @@
     </ion-toolbar>
   </ion-header>
 }
-<ion-content [fullscreen]="true" [fullscreen]="true"
+<ion-content
+  [fullscreen]="true"
+  [fullscreen]="true"
   [scrollEvents]="true"
   [scrollY]="this.isAllowScroll"
   (ionScrollStart)="this.logScrollStart()"
   (ionScroll)="this.logScrolling($event)"
-  (ionScrollEnd)="this.logScrollEnd()" class="ion-padding">
-  @if (this.sioCorePagesComponentState.entities![this.id!]?.toolbar!) {
+  (ionScrollEnd)="this.logScrollEnd()"
+  class="ion-padding"
+>
+  @if (this.sioCorePagesComponentState.entities[this.id!].toolbar) {
     <ion-header collapse="condense">
       <ion-toolbar>
-        <ion-title size="large">{{ this.sioCorePagesComponentState.entities[this.id!].title! |
-        translate }}</ion-title>
+        <ion-title size="large">{{
+          this.sioCorePagesComponentState.entities[this.id!].title! | translate
+        }}</ion-title>
       </ion-toolbar>
     </ion-header>
   }
@@ -46,14 +57,20 @@
   @if (!content.hasChildNodes()) {
     <div id="container">
       <h1>
-        {{ 'PAGE_COMPONENT_DEFAULT_1' | translate }} {{
-        this.sioCorePagesComponentState.entities[this.id!].title! | translate }}
+        {{ 'PAGE_COMPONENT_DEFAULT_1' | translate }}
+        {{
+          this.sioCorePagesComponentState.entities[this.id!].title! | translate
+        }}
       </h1>
       <strong>{{ 'PAGE_COMPONENT_DEFAULT_2' | translate }}</strong>
       <p>
         {{ 'PAGE_COMPONENT_LINK' | translate }}
-        <a target="_blank" rel="noopener noreferrer" href="https://silicia-apps.gitbook.io/sio-framework/">SIO
-        Framework</a>
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://silicia-apps.gitbook.io/sio-framework/"
+          >SIO Framework</a
+        >
       </p>
     </div>
   }
@@ -67,7 +84,12 @@
     <ion-fab slot="footer" vertical="bottom" horizontal="end">
       <sio-button type="fab" icon="add"></sio-button>
       <ion-fab-list side="top">
-        <sio-button type="fab" icon="logo-euro" size="small" upload></sio-button>
+        <sio-button
+          type="fab"
+          icon="logo-euro"
+          size="small"
+          upload
+        ></sio-button>
         <!--// <sio-button type="fab" icon="notifications" size="small"></sio-button> //-->
         <sio-button type="fab" icon="car" size="small" upload></sio-button>
       </ion-fab-list>
